backport of apache camel mail component from release 4.18.0 + assimbly custom changes