@@ -16,15 +16,16 @@
  */
 package org.assimbly.mail.component.mail;
 
-import jakarta.mail.Message;
-import jakarta.mail.MessagingException;
-import jakarta.mail.internet.InternetAddress;
-import org.eclipse.angus.mail.imap.SortTerm;
-
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
+
+import jakarta.mail.Message;
+import jakarta.mail.MessagingException;
+import jakarta.mail.internet.InternetAddress;
+
+import org.eclipse.angus.mail.imap.SortTerm;
 
 /**
  * Utility class for sorting of mail messages
@@ -110,7 +111,7 @@ public final class MailSorter {
      * @param  msg2                            Message 2
      * @param  property                        Property to compare
      * @return                                 msg1.property.compareTo(msg2.property)
-     * @throws MessagingException If message data could not be read.
+     * @throws jakarta.mail.MessagingException If message data could not be read.
      */
     private static int compareMessageProperty(Message msg1, Message msg2, SortTerm property) throws MessagingException {
         if (property.equals(SortTerm.TO)) {
@@ -142,7 +143,7 @@ public final class MailSorter {
             String sub2 = msg2.getSubject();
             return sub1.compareTo(sub2);
         }
-        throw new IllegalArgumentException("Unknown sort term: %s".formatted(property.toString()));
+        throw new IllegalArgumentException(String.format("Unknown sort term: %s", property.toString()));
     }
 
     /**
