@@ -16,10 +16,16 @@
  */
 package org.assimbly.mail.component.mail;
 
-import jakarta.mail.*;
+import jakarta.mail.Message;
+import jakarta.mail.MessagingException;
+import jakarta.mail.Multipart;
+import jakarta.mail.PasswordAuthentication;
+import jakarta.mail.Session;
+import jakarta.mail.Transport;
 import jakarta.mail.internet.MimeBodyPart;
 import jakarta.mail.internet.MimeMessage;
 import jakarta.mail.internet.MimeMultipart;
+
 import org.apache.camel.Exchange;
 import org.apache.camel.builder.RouteBuilder;
 import org.assimbly.mail.component.mail.Mailbox.MailboxUser;
@@ -57,7 +63,7 @@ public class AuthenticatorTest extends CamelTestSupport {
 
         resultEndpoint.assertIsSatisfied();
 
-        Exchange exchange = resultEndpoint.getReceivedExchanges().getFirst();
+        Exchange exchange = resultEndpoint.getReceivedExchanges().get(0);
         String text = exchange.getIn().getBody(String.class);
         assertEquals(body, text, "mail body");
         return body;
