@@ -16,6 +16,9 @@
  */
 package org.assimbly.mail.component.mail;
 
+import java.util.HashMap;
+import java.util.Map;
+
 import org.apache.camel.builder.RouteBuilder;
 import org.assimbly.mail.component.mail.Mailbox.MailboxUser;
 import org.assimbly.mail.component.mail.Mailbox.Protocol;
@@ -23,9 +26,6 @@ import org.apache.camel.component.mock.MockEndpoint;
 import org.apache.camel.test.junit5.CamelTestSupport;
 import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.Test;
-
-import java.util.HashMap;
-import java.util.Map;
 
 /**
  * Unit test to verify that message headers override pre configuration.
@@ -52,7 +52,7 @@ public class MailHeaderOverrulePreConfigurationRecipientsTest extends CamelTestS
 
         mock.assertIsSatisfied();
         /* Bcc should be stripped by specs compliant SMTP servers */
-        Assertions.assertThat(mock.getReceivedExchanges().getFirst().getMessage().getHeader("bcc")).isNull();
+        Assertions.assertThat(mock.getReceivedExchanges().get(0).getMessage().getHeader("bcc")).isNull();
     }
 
     @Override
