@@ -16,9 +16,17 @@
  */
 package org.assimbly.mail.component.mail;
 
-import jakarta.mail.*;
+import java.util.Enumeration;
+import java.util.Iterator;
+
+import jakarta.mail.Address;
+import jakarta.mail.Header;
+import jakarta.mail.Message;
+import jakarta.mail.Session;
+import jakarta.mail.Transport;
 import jakarta.mail.internet.InternetAddress;
 import jakarta.mail.internet.MimeMessage;
+
 import org.apache.camel.Exchange;
 import org.apache.camel.builder.RouteBuilder;
 import org.assimbly.mail.component.mail.Mailbox.MailboxUser;
@@ -30,9 +38,6 @@ import org.apache.camel.util.CastUtils;
 import org.junit.jupiter.api.Test;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-
-import java.util.Enumeration;
-import java.util.Iterator;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
@@ -64,7 +69,7 @@ public class MultipleDestinationConsumeTest extends CamelTestSupport {
         // lets test the receive worked
         resultEndpoint.assertIsSatisfied(100000);
 
-        Exchange exchange = resultEndpoint.getReceivedExchanges().getFirst();
+        Exchange exchange = resultEndpoint.getReceivedExchanges().get(0);
 
         org.apache.camel.Message in = exchange.getIn();
         assertNotNull(in.getHeaders(), "Should have headers");
